--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -66,7 +66,7 @@
     <ClInclude Include="..\engine\CMeshManager.h" />
     <ClInclude Include="..\engine\CMeshSceneNode.h" />
     <ClInclude Include="..\engine\COSInfo.h" />
-    <ClInclude Include="..\engine\CFrameRenderer.h" />
+    <ClInclude Include="..\engine\CRenderLoop.h" />
     <ClInclude Include="..\engine\CScene.h" />
     <ClInclude Include="..\engine\CSceneRenderer.h" />
     <ClInclude Include="..\engine\CWinMemDbg.h" />
@@ -118,7 +118,7 @@
     <ClCompile Include="..\engine\CMeshManager.cpp" />
     <ClCompile Include="..\engine\CMeshSceneNode.cpp" />
     <ClCompile Include="..\engine\COSInfo.cpp" />
-    <ClCompile Include="..\engine\CFrameRenderer.cpp" />
+    <ClCompile Include="..\engine\CRenderLoop.cpp" />
     <ClCompile Include="..\engine\CScene.cpp" />
     <ClCompile Include="..\engine\CSceneRenderer.cpp" />
     <ClCompile Include="..\engine\CShaderUtil.cpp" />
