--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="..\engine\mywow.h" />
     <ClInclude Include="..\engine\CRenderSetting.h" />
     <ClInclude Include="..\engine\RenderStruct.h" />
+    <ClInclude Include="..\engine\SCullResult.h" />
     <ClInclude Include="..\engine\SMaterial.h" />
   </ItemGroup>
   <ItemGroup>
