--- a/engine/mywow/mywow.vcxproj.filters
+++ b/engine/mywow/mywow.vcxproj.filters
@@ -233,6 +233,9 @@
     <ClInclude Include="..\engine\SCullResult.h">
       <Filter>engine</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\SGlobalLayerData.h">
+      <Filter>engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFileSystem.cpp">
