--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="..\engine\CRenderSetting.h" />
     <ClInclude Include="..\engine\RenderStruct.h" />
     <ClInclude Include="..\engine\SCullResult.h" />
+    <ClInclude Include="..\engine\SGlobalLayerData.h" />
     <ClInclude Include="..\engine\SMaterial.h" />
   </ItemGroup>
   <ItemGroup>
