--- a/engine/mywow/mywow.vcxproj.filters
+++ b/engine/mywow/mywow.vcxproj.filters
@@ -74,9 +74,6 @@
     <ClInclude Include="..\common\wowDbFile.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\wowEnums.h">
-      <Filter>common</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\wowEnvironment.h">
       <Filter>common</Filter>
     </ClInclude>
@@ -236,6 +233,18 @@
     <ClInclude Include="..\engine\SGlobalLayerData.h">
       <Filter>engine</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\wowHeader.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\wowGameFile.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\wowM2File.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\wowM2Struct.h">
+      <Filter>common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFileSystem.cpp">
@@ -345,6 +354,12 @@
     </ClCompile>
     <ClCompile Include="..\engine\CRenderLoop.cpp">
       <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\wowGameFile.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\wowM2File.cpp">
+      <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
