--- a/3rdparty/CascLib/CascLib.vcxproj
+++ b/3rdparty/CascLib/CascLib.vcxproj
@@ -138,47 +138,56 @@
     <ClInclude Include="CascCommon.h" />
     <ClInclude Include="CascLib.h" />
     <ClInclude Include="CascPort.h" />
+    <ClInclude Include="CascStructs.h" />
     <ClInclude Include="common\Array.h" />
     <ClInclude Include="common\Common.h" />
     <ClInclude Include="common\Csv.h" />
     <ClInclude Include="common\Directory.h" />
     <ClInclude Include="common\FileStream.h" />
     <ClInclude Include="common\FileTree.h" />
+    <ClInclude Include="common\IndexMap.h" />
     <ClInclude Include="common\ListFile.h" />
     <ClInclude Include="common\Map.h" />
+    <ClInclude Include="common\Path.h" />
     <ClInclude Include="common\RootHandler.h" />
+    <ClInclude Include="jenkins\lookup.h" />
+    <ClInclude Include="md5\md5.h" />
+    <ClInclude Include="zlib\crc32.h" />
+    <ClInclude Include="zlib\gzguts.h" />
+    <ClInclude Include="zlib\inffast.h" />
+    <ClInclude Include="zlib\inffixed.h" />
+    <ClInclude Include="zlib\inflate.h" />
+    <ClInclude Include="zlib\inftrees.h" />
+    <ClInclude Include="zlib\zconf.h" />
+    <ClInclude Include="zlib\zlib.h" />
+    <ClInclude Include="zlib\zutil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CascCommon.cpp" />
     <ClCompile Include="CascDecompress.cpp" />
     <ClCompile Include="CascDecrypt.cpp" />
     <ClCompile Include="CascDumpData.cpp" />
     <ClCompile Include="CascFiles.cpp" />
     <ClCompile Include="CascFindFile.cpp" />
+    <ClCompile Include="CascIndexFiles.cpp" />
     <ClCompile Include="CascOpenFile.cpp" />
     <ClCompile Include="CascOpenStorage.cpp" />
     <ClCompile Include="CascReadFile.cpp" />
     <ClCompile Include="CascRootFile_Diablo3.cpp" />
-    <ClCompile Include="CascRootFile_Mndx.cpp" />
+    <ClCompile Include="CascRootFile_Install.cpp" />
+    <ClCompile Include="CascRootFile_MNDX.cpp" />
     <ClCompile Include="CascRootFile_OW.cpp" />
     <ClCompile Include="CascRootFile_Text.cpp" />
     <ClCompile Include="CascRootFile_TVFS.cpp" />
-    <ClCompile Include="CascRootFile_WoW6.cpp" />
+    <ClCompile Include="CascRootFile_WoW.cpp" />
     <ClCompile Include="common\Common.cpp" />
     <ClCompile Include="common\Csv.cpp" />
     <ClCompile Include="common\Directory.cpp" />
     <ClCompile Include="common\FileStream.cpp" />
     <ClCompile Include="common\FileTree.cpp" />
     <ClCompile Include="common\ListFile.cpp" />
-    <ClCompile Include="common\Map.cpp" />
     <ClCompile Include="common\RootHandler.cpp" />
     <ClCompile Include="jenkins\lookup3.c" />
-    <ClCompile Include="libtomcrypt\src\hashes\hash_memory.c" />
-    <ClCompile Include="libtomcrypt\src\hashes\md5.c" />
-    <ClCompile Include="libtomcrypt\src\misc\crypt_argchk.c" />
-    <ClCompile Include="libtomcrypt\src\misc\crypt_hash_descriptor.c" />
-    <ClCompile Include="libtomcrypt\src\misc\crypt_hash_is_valid.c" />
-    <ClCompile Include="libtomcrypt\src\misc\crypt_libc.c" />
+    <ClCompile Include="md5\md5.cpp" />
     <ClCompile Include="zlib\adler32.c" />
     <ClCompile Include="zlib\crc32.c" />
     <ClCompile Include="zlib\inffast.c" />
