--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -66,6 +66,7 @@
     <ClInclude Include="..\engine\CGeometryCreator.h" />
     <ClInclude Include="..\engine\CCImage.h" />
     <ClInclude Include="..\engine\CInputReader.h" />
+    <ClInclude Include="..\engine\CMaterial.h" />
     <ClInclude Include="..\engine\CMesh.h" />
     <ClInclude Include="..\engine\CMeshManager.h" />
     <ClInclude Include="..\engine\CMeshSceneNode.h" />
@@ -123,6 +124,7 @@
     <ClCompile Include="..\engine\CFTFont.cpp" />
     <ClCompile Include="..\engine\CFTGlyphCache.cpp" />
     <ClCompile Include="..\engine\CInputReader.cpp" />
+    <ClCompile Include="..\engine\CMaterial.cpp" />
     <ClCompile Include="..\engine\CMesh.cpp" />
     <ClCompile Include="..\engine\CMeshManager.cpp" />
     <ClCompile Include="..\engine\CMeshSceneNode.cpp" />
