--- a/tools/TestParser/TestParser.vcxproj
+++ b/tools/TestParser/TestParser.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="..\..\engine\common\CSysThread.cpp" />
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp" />
     <ClCompile Include="..\..\engine\common\ScriptLexer.cpp" />
+    <ClCompile Include="..\..\engine\common\ScriptParser.cpp" />
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp" />
     <ClCompile Include="..\..\engine\common\wowDbFile.cpp" />
     <ClCompile Include="..\..\engine\common\wowEnvironment.cpp" />
@@ -178,7 +179,6 @@
     <ClCompile Include="..\..\engine\common\wowWDB5File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWDC3File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp" />
-    <ClCompile Include="ScriptParser.cpp" />
     <ClCompile Include="TestParser.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -205,6 +205,7 @@
     <ClInclude Include="..\..\engine\common\S3DVertex.h" />
     <ClInclude Include="..\..\engine\common\SColor.h" />
     <ClInclude Include="..\..\engine\common\ScriptLexer.h" />
+    <ClInclude Include="..\..\engine\common\ScriptParser.h" />
     <ClInclude Include="..\..\engine\common\stringext.h" />
     <ClInclude Include="..\..\engine\common\varianttype.h" />
     <ClInclude Include="..\..\engine\common\vector2d.h" />
@@ -222,7 +223,6 @@
     <ClInclude Include="..\..\engine\common\wowWDC3File.h" />
     <ClInclude Include="..\..\engine\common\wowWMOFile.h" />
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h" />
-    <ClInclude Include="ScriptParser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
