--- a/engine/mywow/mywow.vcxproj.filters
+++ b/engine/mywow/mywow.vcxproj.filters
@@ -131,9 +131,6 @@
     <ClInclude Include="..\engine\ITexture.h">
       <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\engine\CGeometryCreator.h">
-      <Filter>engine</Filter>
-    </ClInclude>
     <ClInclude Include="..\engine\CCamera.h">
       <Filter>engine</Filter>
     </ClInclude>
@@ -250,6 +247,15 @@
     </ClInclude>
     <ClInclude Include="..\engine\CMaterial.h">
       <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\CResourceCache.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\ScriptLexer.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\ScriptParser.h">
+      <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -372,6 +378,12 @@
     </ClCompile>
     <ClCompile Include="..\engine\CMaterial.cpp">
       <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\ScriptLexer.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\ScriptParser.cpp">
+      <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
